--- a/index.html
+++ b/index.html
@@ -2,3 +2,25 @@
 layout: index
 lang: en
 ---
+#include <iostream.h>
+#include <conio.h>
+#include <string>
+int main() {
+
+	string name[3];
+	float score[3];
+	int i;
+	for (i=0;i<3;i++)
+	{
+		cout<<"name"<<i+1<<":";
+		cin>>name[i];
+		cout<<"score"<<i+1<<":";
+		cin>>score[i];
+	}
+	for(i=0;i<;i++)
+	{
+		cout<<name[i]<<""<<score[i]<<endl;
+	}
+	getch();
+	return0;
+}
